Fix quote styles for overlap issue

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -37,3 +37,11 @@ body {
     border-color: black;
     padding: 1rem;
 }
+
+#quoteDiv{
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
